ATO-251: Return vtr list
- Return list of requested vectors of trust
- Extract out ordering list and get lowest credential level from `ClientSession` to static methods in `VectorOfTrust`
- Remove `effectiveVectorOfTrust`